--- a/home.hbs
+++ b/home.hbs
@@ -1,5 +1,6 @@
 <!-- home.hbs -->
 {{!-- The default homepage templage --}}
+{{!< default}}
 {{#is "home"}}
 <main role="main">
     <article class="{{post_class}}">
