--- a/index.hbs
+++ b/index.hbs
@@ -1,5 +1,6 @@
 <!-- index.hbs -->
 {{!-- A general templage for posts (and pages) indecies that does not use a custom template --}}
+{{!< default}}
 {{#is "index"}}
 <main role="main">
     {{#foreach posts}}
