--- a/tag-syntax.hbs
+++ b/tag-syntax.hbs
@@ -1,4 +1,5 @@
 <!-- tag-syntax.hbs -->
 {{!-- A custom templage for post/pages with the primary tag #syntax --}}
+{{!< default}}
 {{#is "tag"}}
 {{/is}}
