--- a/private.hbs
+++ b/private.hbs
@@ -1,2 +1,3 @@
 <!-- private.hbs -->
 {{!-- An optional template for the password form page on password protected publications. --}}
+{{!< default}}
