--- a/custom-video.hbs
+++ b/custom-video.hbs
@@ -1,3 +1,3 @@
-<!-- custom-video.hbs -->
-{{!-- A custom templage named "Video" for both posts and pages --}}
 {{!< default}}
+<!-- custom-video.hbs -->
+{{!-- A custom templage named "Video" for both pages and posts --}}
