--- a/page-contact.hbs
+++ b/page-contact.hbs
@@ -1,4 +1,6 @@
 {{!< default}}
+<!-- page-contact.hbs -->
+{{!-- A custom templage for the "Contact" page --}}
 {{#is "page"}}
 {{#post}}
 <main role="main">
