--- a/index.hbs
+++ b/index.hbs
@@ -1,30 +1,74 @@
 {{!< default}}
+
 <!-- index.hbs -->
-{{!-- A general templage for posts (and pages) indecies that does not use a custom template --}}
-{{#is "index"}}
-<main role="main">
-    {{#foreach posts}}
-    <article class="{{post_class}}">
-        <header>
-            <h1 class="page-title">{{@site.title}}</h1>
-            <h2 class="page-description">{{@site.description}}</h2>
-        </header>
-        <section>
-            <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, non fugit!</p>
-                <p>Numquam at et, suscipit blanditiis mollitia repellendus veniam. Sapiente eaque,<br />
-                ducimus sequi quasi ipsum animi libero maiores officiis.</p>
-            </div>
-            <div>
-                {{> "loop"}}
-            </div>
-        </section>
-        <footer>
-            <h5>Thank you!</h5>
-        </footer>
-    </article>
-    {{/foreach}}
-</main>
-{{/is}}
-{{!-- Previous/next page links - displayed on every page --}}
-{{pagination}}
+    {{!-- A general templage for posts (and pages) indecies that does not use a custom template --}}
+
+    {{!-- The main content area --}}
+    <main id="site-main" class="site-main outer">
+        <div class="post-feed">
+            {{#foreach posts}}
+            {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
+            {{> "post-card"}}
+            {{/foreach}}
+        </div>
+    </main>
+
+    {{!-- The #contentFor helper here will send everything inside it up to the matching #block helper found in
+    default.hbs --}}
+    {{#contentFor "scripts"}}
+    <script>
+
+        // NOTE: Scroll performance is poor in Safari
+        // - this appears to be due to the events firing much more slowly in Safari.
+        //   Dropping the scroll event and using only a raf loop results in smoother
+        //   scrolling but continuous processing even when not scrolling
+        $(document).ready(function () {
+
+            var nav = document.querySelector('.site-nav-main .site-nav');
+            var feed = document.querySelector('.post-feed');
+
+            var lastScrollY = window.scrollY;
+            var lastWindowHeight = window.innerHeight;
+            var lastDocumentHeight = $(document).height();
+            var ticking = false;
+
+            function onScroll() {
+                lastScrollY = window.scrollY;
+                requestTick();
+            }
+
+            function onResize() {
+                lastWindowHeight = window.innerHeight;
+                lastDocumentHeight = $(document).height();
+                requestTick();
+            }
+
+            function requestTick() {
+                if (!ticking) {
+                    requestAnimationFrame(update);
+                }
+                ticking = true;
+            }
+
+            function update() {
+                var trigger = feed.getBoundingClientRect().top + window.scrollY;
+                var progressMax = lastDocumentHeight - lastWindowHeight;
+
+                // show/hide nav
+                if (lastScrollY >= trigger - 20) {
+                    nav.classList.add('fixed-nav-active');
+                } else {
+                    nav.classList.remove('fixed-nav-active');
+                }
+
+                ticking = false;
+            }
+
+            window.addEventListener('scroll', onScroll, { passive: true });
+            window.addEventListener('resize', onResize, false);
+
+            update();
+
+        });
+    </script>
+    {{/contentFor}}
